--- a/visualizar.ipynb
+++ b/visualizar.ipynb
@@ -18,7 +18,7 @@
    "id": "add8e786",
    "metadata": {},
    "source": [
-    "Importação do projeto1 além de de outros módulos complementares:"
+    "Importação do métricas além de de outros módulos complementares:"
    ]
   },
   {
@@ -29,11 +29,11 @@
    "outputs": [],
    "source": [
     "import importlib\n",
-    "import projeto1\n",
+    "import métricas\n",
     "\n",
-    "importlib.reload(projeto1)  # Recarrega o arquivo projeto1.py\n",
+    "importlib.reload(métricas)  # Recarrega o arquivo métricas.py\n",
     "\n",
-    "from projeto1 import *\n",
+    "from métricas import *\n",
     "\n",
     "main()"
    ]
@@ -123,7 +123,7 @@
    ],
    "source": [
     "# Exibe as estatísticas\n",
-    "from projeto1 import carregar_estatisticas, plotar_intermediacao, criar_tabela_grafo\n",
+    "from métricas import carregar_estatisticas, plotar_intermediacao, criar_tabela_grafo\n",
     "\n",
     "# Exibe as estatísticas\n",
     "from IPython.display import display\n",
@@ -1253,7 +1253,7 @@
    ],
    "source": [
     "# Exibe a tabela do grafo\n",
-    "from projeto1 import global_grafo\n",
+    "from métricas import global_grafo\n",
     "styled_table_grafo = criar_tabela_grafo(global_grafo)\n",
     "styled_table_grafo"
    ]
