--- a/visualizar.ipynb
+++ b/visualizar.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "97037099",
+   "id": "cf52d457",
    "metadata": {},
    "source": [
     "# 📈 Pré-processamento dos dados (Etapa 1)\n",
@@ -14,15 +14,6 @@
     "- Representação do grafo\n",
     "- Leitura dos dados\n",
     "- Cálculo das estatísticas principais"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cf52d457",
-   "metadata": {},
-   "source": [
-    "## 1. Importação de bibliotecas e funções auxiliares\n",
-    "Importa bibliotecas essenciais, funções do módulo métricas e define utilitários de visualização para o notebook."
    ]
   },
   {
@@ -42,10 +33,9 @@
     "import os\n",
     "import ipywidgets as widgets\n",
     "\n",
-    "# Função de visualização: cria uma tabela estilizada da matriz de adjacência do grafo\n",
+    "# Função de visualização: criar tabela do grafo\n",
     "\n",
     "def criar_tabela_grafo(grafo):\n",
-    "    \"\"\"Gera uma tabela visualmente amigável para a matriz de adjacência do grafo.\"\"\"\n",
     "    if grafo is None or not hasattr(grafo, 'shape') or len(grafo.shape) != 2:\n",
     "        print(\"Grafo não carregado corretamente ou está vazio.\")\n",
     "        return None\n",
@@ -103,21 +93,7 @@
     "            'props': [('max-width', cell_width)]\n",
     "        }])\n",
     "    )\n",
-    "    return styled_table\n",
-    "\n",
-    "def criar_tabela_grafo_scroll(grafo):\n",
-    "    \"\"\"Adiciona rolagem horizontal à tabela do grafo para grafos grandes.\"\"\"\n",
-    "    tabela = criar_tabela_grafo(grafo)\n",
-    "    return tabela.set_table_attributes('style=\"display:block;overflow-x:auto;max-width:100%;\"')\n",
-    "\n",
-    "def formatar_valor(v):\n",
-    "    \"\"\"Formata valores para exibição padronizada na tabela de métricas.\"\"\"\n",
-    "    if isinstance(v, float):\n",
-    "        if v.is_integer():\n",
-    "            return f\"{int(v)}\"\n",
-    "        else:\n",
-    "            return f\"{v:.1f}\"\n",
-    "    return v"
+    "    return styled_table"
    ]
   },
   {
@@ -147,27 +123,9 @@
     "    description='Arquivo:',\n",
     "    disabled=False,\n",
     ")\n",
-    "output = widgets.Output()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aa7d7ba1",
-   "metadata": {},
-   "source": [
-    "## 3. Funções auxiliares para análise do grafo\n",
-    "Inclui funções para componentes conectados e atualização dinâmica da visualização."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6be05487",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "output = widgets.Output()\n",
+    "\n",
     "def componentes_conectados(grafo):\n",
-    "    \"\"\"Calcula o número de componentes conectados no grafo.\"\"\"\n",
     "    n = grafo.shape[0] - 1\n",
     "    visitados = set()\n",
     "    componentes = 0\n",
@@ -181,66 +139,72 @@
     "                    vizinhos = [i for i in range(1, n+1) if grafo[u][i] < np.inf and u != i]\n",
     "                    fila.extend([w for w in vizinhos if w not in visitados])\n",
     "            componentes += 1\n",
-    "    return componentes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "07a70bad",
-   "metadata": {},
-   "source": [
-    "## 4. Visualização interativa dos resultados\n",
-    "Esta célula executa a análise, calcula as métricas e exibe as tabelas e gráficos de forma dinâmica conforme a instância selecionada."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d4059f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return componentes\n",
+    "\n",
+    "def formatar_valor(v):\n",
+    "    if isinstance(v, float):\n",
+    "        if v.is_integer():\n",
+    "            return f\"{int(v)}\"\n",
+    "        else:\n",
+    "            return f\"{v:.1f}\"\n",
+    "    return v\n",
+    "\n",
+    "def criar_tabela_grafo_scroll(grafo):\n",
+    "    tabela = criar_tabela_grafo(grafo)\n",
+    "    return tabela.set_table_attributes('style=\"display:block;overflow-x:auto;max-width:100%;\"')\n",
+    "\n",
     "def atualizar_visualizacao(change):\n",
-    "    \"\"\"Atualiza todas as visualizações (métricas, intermediação, matriz) ao trocar de arquivo.\"\"\"\n",
     "    with output:\n",
-    "        clear_output()\n",
+    "        clear_output(wait=True)\n",
     "        arquivo = file_selector.value\n",
     "        with open(f'testes/{arquivo}', 'r', encoding='utf-8') as f:\n",
     "            linhas = f.readlines()\n",
     "        dados = extrair_dados_instancia(linhas)\n",
     "        grafo = dados['grafo']\n",
     "\n",
-    "        # Cálculo das métricas principais\n",
+    "        # 1. Quantidade de vértices\n",
     "        qtd_vertices = dados['qtd_vertices']\n",
+    "        # 2. Quantidade de arestas\n",
     "        qtd_arestas = len(dados['arestas']) + len(dados['arestas_req'])\n",
+    "        # 3. Quantidade de arcos\n",
     "        qtd_arcos = len(dados['arcos']) + len(dados['arcos_req'])\n",
+    "        # 4. Quantidade de vértices requeridos\n",
     "        qtd_vertices_req = len(set(\n",
     "            [i for (i, _, *_) in dados['arestas_req']] +\n",
     "            [j for (_, j, *_) in dados['arestas_req']] +\n",
     "            [i for (i, _, *_) in dados['arcos_req']] +\n",
     "            [j for (_, j, *_) in dados['arcos_req']]\n",
     "        ))\n",
+    "        # 5. Quantidade de arestas requeridas\n",
     "        qtd_arestas_req = len(dados['arestas_req'])\n",
+    "        # 6. Quantidade de arcos requeridos\n",
     "        qtd_arcos_req = len(dados['arcos_req'])\n",
+    "        # 7. Densidade do grafo\n",
     "        dens = densidade(qtd_vertices, len(dados['arestas']) + len(dados['arestas_req']),\n",
     "                         len(dados['arcos']) + len(dados['arcos_req']))\n",
+    "        # 8. Componentes conectados\n",
     "        try:\n",
     "            n_componentes = componentes_conectados(grafo)\n",
     "        except Exception:\n",
     "            n_componentes = \"Função não implementada\"\n",
+    "        # 9. Grau mínimo dos vértices\n",
     "        graus = calcula_graus(dados)\n",
     "        grau_min = min([g[4] for g in graus])\n",
+    "        # 10. Grau máximo dos vértices\n",
     "        grau_max = max([g[4] for g in graus])\n",
+    "        # 11. Intermediação\n",
     "        try:\n",
     "            vertices = list(range(1, qtd_vertices+1))\n",
     "            intermediacao = calcula_intermediacao(vertices, grafo)\n",
     "        except Exception:\n",
     "            intermediacao = {}\n",
+    "        # 12. Caminho médio\n",
     "        try:\n",
     "            distancias, _ = floyd_warshall(grafo)\n",
     "            caminho_medio_val = caminho_medio(distancias)\n",
     "        except Exception:\n",
     "            caminho_medio_val = \"Função não implementada\"\n",
+    "        # 13. Diâmetro\n",
     "        try:\n",
     "            diametro_val = diametro(distancias)\n",
     "        except Exception:\n",
@@ -265,7 +229,7 @@
     "            [(k, formatar_valor(v)) for k, v in estatisticas.items()],\n",
     "            columns=['Métrica', 'Valor']\n",
     "        )\n",
-    "        display(HTML(\"<h4>Estatísticas Básicas do Grafo</h4>\"))\n",
+    "        display(HTML(\"<h4>Métricas do Grafo</h4>\"))\n",
     "        display(df_est.style.set_properties(**{'width': '300px'}))\n",
     "\n",
     "        display(HTML(\"<h4>Intermediação dos Vértices</h4>\"))\n",
@@ -283,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "858fd923",
+   "id": "3cfe50ed",
    "metadata": {},
    "source": [
     "## Matriz de Adjacência\n",
