feat: melhor modularização do visualizar

--- a/visualizar.ipynb
+++ b/visualizar.ipynb
@@ -18,103 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "d970d841",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import importlib\n",
-    "import métricas\n",
-    "importlib.reload(métricas)\n",
-    "from métricas import *\n",
-    "from IPython.display import display, clear_output, HTML\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "import ipywidgets as widgets\n",
-    "\n",
-    "# Função de visualização: criar tabela do grafo\n",
-    "\n",
-    "def criar_tabela_grafo(grafo):\n",
-    "    if grafo is None or not hasattr(grafo, 'shape') or len(grafo.shape) != 2:\n",
-    "        print(\"Grafo não carregado corretamente ou está vazio.\")\n",
-    "        return None\n",
-    "    grafo_ajustado = np.array(grafo)[1:, 1:]\n",
-    "    n_vertices = grafo_ajustado.shape[0]\n",
-    "    if n_vertices <= 30:\n",
-    "        cell_width = '25px'\n",
-    "        font_size = '9pt'\n",
-    "    elif n_vertices <= 100:\n",
-    "        cell_width = '15px'\n",
-    "        font_size = '8pt'\n",
-    "    else:\n",
-    "        cell_width = '10px'\n",
-    "        font_size = '7pt'\n",
-    "    df = pd.DataFrame(\n",
-    "        grafo_ajustado,\n",
-    "        index=range(1, n_vertices + 1),\n",
-    "        columns=range(1, n_vertices + 1)\n",
-    "    )\n",
-    "    def format_value(x):\n",
-    "        if pd.isna(x):\n",
-    "            return \"-\"\n",
-    "        elif np.isinf(x):\n",
-    "            return \"∞\"\n",
-    "        elif isinstance(x, (int, np.integer)):\n",
-    "            return str(x)\n",
-    "        elif isinstance(x, (float, np.floating)):\n",
-    "            return f\"{x:.2f}\" if not x.is_integer() else str(int(x))\n",
-    "        return str(x)\n",
-    "    def background_style(x):\n",
-    "        return 'background-color: #e6f3ff' if x != 0 and not np.isinf(x) else 'background-color: white'\n",
-    "    styled_table = (\n",
-    "        df.style\n",
-    "        .map(background_style)\n",
-    "        .format(format_value)\n",
-    "        .set_properties(**{\n",
-    "            'text-align': 'center',\n",
-    "            'font-size': font_size,\n",
-    "            'padding': '2px',\n",
-    "            'border': '1px solid #ddd',\n",
-    "            'width': cell_width,\n",
-    "            'height': cell_width\n",
-    "        })\n",
-    "        .set_table_styles([{\n",
-    "            'selector': 'table',\n",
-    "            'props': [\n",
-    "                ('width', 'auto'),\n",
-    "                ('margin', '0 auto'),\n",
-    "                ('display', 'block' if n_vertices > 100 else 'inline-block'),\n",
-    "                ('max-width', '100%'),\n",
-    "                ('overflow-x', 'auto' if n_vertices > 100 else 'visible')\n",
-    "            ]\n",
-    "        }, {\n",
-    "            'selector': 'th, td',\n",
-    "            'props': [('max-width', cell_width)]\n",
-    "        }])\n",
-    "    )\n",
-    "    return styled_table"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4f35cbcd",
-   "metadata": {},
-   "source": [
-    "## 2. Seleção da instância e widgets de interação\n",
-    "Permite ao usuário escolher o arquivo de instância .dat para análise e inicializa o painel de saída."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "09323e11",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d3d904ebfec4196b1edeed3a905a1d9",
+       "model_id": "caaa1061f5de43a488171aff42d26a1d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -128,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a07c65126a144fabf030da1f49fccce",
+       "model_id": "46fff781b368443f8450be02fe8d9ec7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -141,137 +52,18 @@
     }
    ],
    "source": [
-    "# Widget para seleção de arquivo .dat\n",
+    "from visualizar import painel_visualizacao\n",
     "\n",
-    "dat_files = sorted([f for f in os.listdir('instancias') if f.endswith('.dat')])\n",
-    "def default_file():\n",
-    "    return 'BHW4.dat' if 'BHW4.dat' in dat_files else dat_files[0]\n",
-    "file_selector = widgets.Dropdown(\n",
-    "    options=dat_files,\n",
-    "    value=default_file(),\n",
-    "    description='Arquivo:',\n",
-    "    disabled=False,\n",
-    ")\n",
-    "output = widgets.Output()\n",
-    "\n",
-    "def componentes_conectados(grafo):\n",
-    "    n = grafo.shape[0] - 1\n",
-    "    visitados = set()\n",
-    "    componentes = 0\n",
-    "    for v in range(1, n+1):\n",
-    "        if v not in visitados:\n",
-    "            fila = [v]\n",
-    "            while fila:\n",
-    "                u = fila.pop()\n",
-    "                if u not in visitados:\n",
-    "                    visitados.add(u)\n",
-    "                    vizinhos = [i for i in range(1, n+1) if grafo[u][i] < np.inf and u != i]\n",
-    "                    fila.extend([w for w in vizinhos if w not in visitados])\n",
-    "            componentes += 1\n",
-    "    return componentes\n",
-    "\n",
-    "def formatar_valor(v):\n",
-    "    if isinstance(v, float):\n",
-    "        if v.is_integer():\n",
-    "            return f\"{int(v)}\"\n",
-    "        else:\n",
-    "            return f\"{v:.1f}\"\n",
-    "    return v\n",
-    "\n",
-    "def criar_tabela_grafo_scroll(grafo):\n",
-    "    tabela = criar_tabela_grafo(grafo)\n",
-    "    return tabela.set_table_attributes('style=\"display:block;overflow-x:auto;max-width:100%;\"')\n",
-    "\n",
-    "def atualizar_visualizacao(change):\n",
-    "    with output:\n",
-    "        clear_output(wait=True)\n",
-    "        arquivo = file_selector.value\n",
-    "        with open(f'instancias/{arquivo}', 'r', encoding='utf-8') as f:\n",
-    "            linhas = f.readlines()\n",
-    "        dados = extrair_dados_instancia(linhas)\n",
-    "        grafo = dados['grafo']\n",
-    "\n",
-    "        # 1. Quantidade de vértices\n",
-    "        qtd_vertices = dados['qtd_vertices']\n",
-    "        # 2. Quantidade de arestas\n",
-    "        qtd_arestas = len(dados['arestas']) + len(dados['arestas_req'])\n",
-    "        # 3. Quantidade de arcos\n",
-    "        qtd_arcos = len(dados['arcos']) + len(dados['arcos_req'])\n",
-    "        # 4. Quantidade de vértices requeridos\n",
-    "        qtd_vertices_req = len(set(\n",
-    "            [i for (i, _, *_) in dados['arestas_req']] +\n",
-    "            [j for (_, j, *_) in dados['arestas_req']] +\n",
-    "            [i for (i, _, *_) in dados['arcos_req']] +\n",
-    "            [j for (_, j, *_) in dados['arcos_req']]\n",
-    "        ))\n",
-    "        # 5. Quantidade de arestas requeridas\n",
-    "        qtd_arestas_req = len(dados['arestas_req'])\n",
-    "        # 6. Quantidade de arcos requeridos\n",
-    "        qtd_arcos_req = len(dados['arcos_req'])\n",
-    "        # 7. Densidade do grafo\n",
-    "        dens = densidade(qtd_vertices, len(dados['arestas']) + len(dados['arestas_req']),\n",
-    "                         len(dados['arcos']) + len(dados['arcos_req']))\n",
-    "        # 8. Componentes conectados\n",
-    "        try:\n",
-    "            n_componentes = componentes_conectados(grafo)\n",
-    "        except Exception:\n",
-    "            n_componentes = \"Função não implementada\"\n",
-    "        # 9. Grau mínimo dos vértices\n",
-    "        graus = calcula_graus(dados)\n",
-    "        grau_min = min([g[4] for g in graus])\n",
-    "        # 10. Grau máximo dos vértices\n",
-    "        grau_max = max([g[4] for g in graus])\n",
-    "        # 11. Intermediação\n",
-    "        try:\n",
-    "            vertices = list(range(1, qtd_vertices+1))\n",
-    "            intermediacao = calcula_intermediacao(vertices, grafo)\n",
-    "        except Exception:\n",
-    "            intermediacao = {}\n",
-    "        # 12. Caminho médio\n",
-    "        try:\n",
-    "            distancias, _ = floyd_warshall(grafo)\n",
-    "            caminho_medio_val = caminho_medio(distancias)\n",
-    "        except Exception:\n",
-    "            caminho_medio_val = \"Função não implementada\"\n",
-    "        # 13. Diâmetro\n",
-    "        try:\n",
-    "            diametro_val = diametro(distancias)\n",
-    "        except Exception:\n",
-    "            diametro_val = \"Função não implementada\"\n",
-    "\n",
-    "        # Exibe estatísticas em tabela\n",
-    "        estatisticas = {\n",
-    "            'Qtd. Vértices': qtd_vertices,\n",
-    "            'Qtd. Arestas': qtd_arestas,\n",
-    "            'Qtd. Arcos': qtd_arcos,\n",
-    "            'Qtd. Vértices Requeridos': qtd_vertices_req,\n",
-    "            'Qtd. Arestas Requeridas': qtd_arestas_req,\n",
-    "            'Qtd. Arcos Requeridos': qtd_arcos_req,\n",
-    "            'Densidade': dens,\n",
-    "            'Componentes Conectados': n_componentes,\n",
-    "            'Grau Mínimo': grau_min,\n",
-    "            'Grau Máximo': grau_max,\n",
-    "            'Caminho Médio': caminho_medio_val,\n",
-    "            'Diâmetro': diametro_val\n",
-    "        }\n",
-    "        df_est = pd.DataFrame(\n",
-    "            [(k, formatar_valor(v)) for k, v in estatisticas.items()],\n",
-    "            columns=['Métrica', 'Valor']\n",
-    "        )\n",
-    "        display(HTML(\"<h4>Métricas do Grafo</h4>\"))\n",
-    "        display(df_est.style.set_properties(**{'width': '300px'}))\n",
-    "\n",
-    "        display(HTML(\"<h4>Intermediação dos Vértices</h4>\"))\n",
-    "        if intermediacao:\n",
-    "            df_inter = pd.DataFrame(list(intermediacao.items()), columns=['Vértice', 'Intermediação'])\n",
-    "            display(df_inter.style.set_properties(**{'width': '300px'}))\n",
-    "\n",
-    "        display(HTML(\"<h4>Matriz de Adjacência</h4>\"))\n",
-    "        display(criar_tabela_grafo_scroll(grafo))\n",
-    "\n",
-    "file_selector.observe(atualizar_visualizacao, names='value')\n",
-    "display(file_selector, output)\n",
-    "atualizar_visualizacao(None)"
+    "painel_visualizacao()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f35cbcd",
+   "metadata": {},
+   "source": [
+    "## 2. Seleção da instância e widgets de interação\n",
+    "Permite ao usuário escolher o arquivo de instância .dat para análise e inicializa o painel de saída."
    ]
   },
   {
